Added some exceptions to gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,10 @@ build/*
 xcuserdata
 profile
 *.moved-aside
+
+# Exclude temp nibs and swap files
+*~.nib
+*.swp
+
+# Exclude OS X folder attributes
+.DS_Store
